--- a/nomina/transactions/templates/transactions/delete.html
+++ b/nomina/transactions/templates/transactions/delete.html
@@ -1,13 +1,34 @@
-{% extends 'transactions/base.html' %}
+{% extends 'base.html' %}
+{% load static %}
+{% load humanize %}
 
-{% block title %}Delete Transaction{% endblock %}
+{% block title %}Eliminar Transacción{% endblock %}
+
+{% block extra_head %}
+    <link rel="stylesheet" href="{% static 'css/transactions/delete.css' %}" />
+{% endblock %}
 
 {% block content %}
-<h1>Delete Transaction</h1>
-<p>Are you sure you want to delete "{{ transaction.amount }} - {{ transaction.description }}"?</p>
-<form method="post">
-    {% csrf_token %}
-    <button type="submit">Yes, delete</button>
-</form>
-<a href="{% url 'transaction_list' %}">Cancel</a>
+  <div class="delete-container">
+    <div class="main_header">
+        <h1>Eliminar Transacción</h1>
+        <a href="{% url 'transaction_list' %}" class="back-link">&lt; Volver atrás</a>
+    </div>
+    
+    <p class="confirmation-text">
+    ¿Estás seguro que deseas eliminar la transacción de "T{{ transaction.pk|stringformat:"06d" }} - {{ transaction.amount|floatformat:2|intcomma }}$ - {{ transaction.employee.name }}  -
+      {% if transaction.income %}
+        {{ transaction.income.name }}
+      {% else %}
+        {{ transaction.deduction.name }}
+      {% endif %}"?
+    </p>
+    
+    <form method="post" class="delete-form">
+      {% csrf_token %}
+      <button type="submit" class="delete-button">Sí, eliminar</button>
+      <a href="{% url 'transaction_list' %}" class="cancel-button">Cancelar</a>
+    </form>
+  </div>
 {% endblock %}
+
