Updated nomina with new application (pdf)

--- a/nomina/home/templates/home/index.html
+++ b/nomina/home/templates/home/index.html
@@ -81,7 +81,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'home' %}">
+                        <a href="{% url 'pdf_index' %}">
                             <img
                                 src="{% static 'icons/nomina.svg' %}"
                                 alt="Nómina"
