--- a/nomina/static/css/employee/detail.css
+++ b/nomina/static/css/employee/detail.css
@@ -3,7 +3,7 @@
     width: 80%;
     height: 100%;
     display: flex;
-    align-items: left;
+    margin-bottom: 50px;
     flex-direction: column;
     justify-content: flex-start;
 }
